  SQL_C_WXCHAR should be used rather than SQL_C_CHAR to ensure transparent 
  behavior between Unicode and non-unicode builds
- BLOB example added to samples/db (thanks to Casey ODonnell)
- use wxStream::GetLength() instead of deprecated GetSize()
- wxGetOsDescription() is now more precise (Olly Betts)
- XRC supports system fonts and colours (Ray Gilbert)

All (GUI):

- recursive wxSizer::GetItem returns item of given window, sizer or nth index
- wxLayoutConstraints now use best size, not current size, for AsIs() condition
- wxSizer::Add/Insert etc. now returns pointer to wxSizerItem just added and this
  item remembers its wxRect area (Brian A. Vanderburg II)
- wxBookCtrl renamed to wxBookCtrlBase, wxBookCtrl is reserved for most native
  book control (for now wxChoicebook for MSSmartphone, wxNotebook for others).
  Necessary event macros, types and styles mapped accordingly.
- new wxBrush::IsHatch() checking for brush type replaces IS_HATCH macro

Unix:

- wxPuts() now correctly outputs trailing new line in Unicode build

wxGTK:

- fixed wxFileDialog::SetWildcard()
- native file dialog is now used if available (Zbigniew Zagorski)

wxMac:

- wxDynamicLibrary::GetDllExt() now returns ".bundle", not ".dylib"
- wxDynamicLibrary::GetSymbol() now prepends underscore to the symbol name

wxMSW:

- fixed enhanced metafiles loading from files (Andreas Goebel)
- wxRadioButtons no longer have to be consecutive in a group

wxUniv:

- wxBU_... button align flags support
- vertical notebook orientation support
- 3rd state support for checkboxes
- wxLB_SORT and wxCB_SORT now cause case-insensitive sorting


2.5.3
-----

All:

- support for huge (>2 Gb) files (Tim Kosse)
- number of fixes to wxPluginManager (Rick Brice, Hans Van Leemputten)
- fixed memory leak in wxURL when using a proxy (Steven Van Ingelgem)
- fixed bug in wxDateTime::Set(jdn) when DST was in effect
- fixed fatal bug in wxString when wxUSE_STL==1 (Kurt Granroth)